# CursorFlow

./: .gitignore  LICENSE  README.md  README.zh-CN.md  TAURI_BUILD.md  install.sh  package-lock.json  package.json  tsconfig.json
SwiftCursorFlow/: Package.swift  README.md
SwiftCursorFlow/Sources/CursorFlow/: AppConfig.swift  AppDelegate.swift  AppModel.swift  ContentView.swift  CursorFlowApp.swift  MouseController.swift  StatusIcon.swift
SwiftCursorFlow/scripts/: build_app.sh
main/: inputDetection.ts  main.ts  movementEngine.ts  preload.ts
renderer/: index.html
src/: capture.html  index.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_store.rs  input_detection.rs  lib.rs  macos_mouse.rs  main.rs  movement_engine.rs  simulation_model.rs
