[package]
name = "cursor-flow"
version = "1.0.0"
description = "CursorFlow – human-like mouse jiggler"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "cursor_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cursor-flow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
